# gixsql

./: .gitignore  ChangeLog  Makefile.am  NEWS  README  README.md  TESTING.md  config.h.in  configure.ac  gixsql.sln  gixsql_test_local_linux.xml  gixsql_test_local_windows.xml  prepbuild.cmd  prepbuild.sh  prepdist.cmd  prepdist.sh  version.sh
.github/: FUNDING.yml
.github/workflows/: autoconf-src-pkg.yml  gixsql-autoconf-src-pkg.yml  gixsql-debian-packages.yml  gixsql-el8-packages.yml  gixsql-linux-test.yml  gixsql-ubuntu-packages.yml  gixsql-windows-packages.yml  gixsql-windows-test.yml  mingw.yml  msbuild.yml
common/: cobol_var_flags.h  cobol_var_types.h  varlen_defs.h
copy/: SQLCA.ANX.cpy
deploy/installers/linux/: control-debian-10.tpl  control-debian-11.tpl  control-debian-12.tpl  control-gixsql.tpl  control-ubuntu-20.04-lts.tpl  mkdeb-gixsql.sh  spec-el8.tpl
deploy/installers/windows/: gixsql.iss  mkwinpkg.bat
gixpp/: Makefile.am  gixpp.vcxproj  main.cpp
gixsql-tests/: GixSqlDynamicTestRunner.cs  GixSqlTestBase.cs  GixSqlTestData.cs  GixSqlTestDataSourceInfo.cs  TSQL001.cs  TSQL004.cs  TSQL005.cs  TSQL010.cs  TSQL017.cs  TSQL021.cs  TSQL022.cs  TSQL023.cs  TSQL024.cs  TSQL027.cs  TSQL028.cs  TSQL030.cs  TestMatrixDataProvider.cs  app.config  gixsql-tests.csproj  gixsql.local.runsettings  gixsql_test_data.xml  packages.config
gixsql-tests-nunit/: CompilerConfig2.cs  GixSqlDynamicTestRunner.cs  GixSqlTestDataSourceInfo.cs  Options.cs  Runner.cs  TestDataProvider.cs  TestMatrixDataProvider.cs  Utils.cs  app.config  gixsql-tests-nunit.csproj  gixsql.local.runsettings  gixsql_test_gh_linux.xml  gixsql_test_local.xml  gixsql_test_local_linux.xml  gixsql_test_local_windows.xml
gixsql-tests-nunit/data/: TSQL001A.cbl  TSQL004B.cbl  TSQL005D.cbl  TSQL006A.cbl  TSQL017A.cbl  TSQL029A.cbl  TSQL030A.cbl  TSQL036A.cbl  TSQL037A.cbl  TSQL037B.cbl  TSQL041A.cbl  dbdata-016.sql  dbdata-042-oracle.sql  dbdata-042.sql  gixsql_test_data.xml
gixsql-tests-nunit/data/ssl/: pgsql-test.crt  pgsql-test.csr  pgsql-test.key  root-ca.crt  root-ca.key
gixsql-tests/data/: EMPREC.cpy  TSQL003A.cbl  TSQL004A.cbl  TSQL005B.cbl  TSQL005C.cbl  TSQL014C.cbl  TSQL023A.cbl  TSQL024A.cbl  TSQL027A.cbl  TSQL029A.cbl  TSQL030A.cbl
libcpputils/: CopyResolver.cpp  CopyResolver.h  libcpputils.cpp  libcpputils.h
libgixpp/: ESQLCall.cpp  ESQLCall.h  ESQLDefinitions.h  ESQLParserData.cpp  ESQLParserData.h  GixEsqlLexer.cpp  GixEsqlLexer.hh  GixPreProcessor.cpp  GixPreProcessor.h  ITransformationStep.cpp  ITransformationStep.h  Makefile.am  TPESQLCommon.cpp  TPESQLCommon.h  TPESQLParser.cpp  TPESQLParser.h  TPESQLProcessing.cpp  TPESQLProcessing.h  TPESQLProcessor.cpp  TPESQLProcessor.h  TPSourceConsolidation.cpp  TPSourceConsolidation.h  cobol_var_types.h  gix_esql_driver.cc  gix_esql_driver.hh  gix_esql_parser.yy  gix_esql_scanner.ll  libgixpp.h  libgixpp.vcxproj  libgixpp.vcxproj.filters
misc/: gixsql-wrapper
runtime/libgixsql/: Connection.cpp  Connection.h  ConnectionManager.cpp  ConnectionManager.h  Cursor.cpp  Cursor.h  CursorManager.cpp  CursorManager.h  DataSourceInfo.cpp  DataSourceInfo.h  DbInterfaceFactory.cpp  DbInterfaceFactory.h  GlobalEnv.cpp  GlobalEnv.h  IConnection.h  IConnectionOptions.h  ICursor.h  IDbInterface.h  IResultSetContextData.h  Logger.h  Makefile.am  SqlVar.cpp  SqlVar.h  SqlVarList.cpp  SqlVarList.h  custom_formatters.h  dllmain.cpp  gixsql.cpp  gixsql.h  libgixsql-cpp.vcxproj  libgixsql-cpp.vcxproj.filters  utils.cpp  utils.h
runtime/libgixsql-mysql/: DbInterfaceManagerMySQL.cpp  DbInterfaceMySQL.cpp  DbInterfaceMySQL.h  Makefile.am  libgixsql-mysql.vcxproj  utils.cpp  utils.h
runtime/libgixsql-odbc/: DbInterfaceManagerODBC.cpp  DbInterfaceODBC.cpp  DbInterfaceODBC.h  Makefile.am  dblib.cpp  libgixsql-odbc.vcxproj  utils.cpp  utils.h
runtime/libgixsql-oracle/: DbInterfaceOracle.cpp  DbInterfaceOracle.h  Makefile.am  libgixsql-oracle.vcxproj  libgixsql-oracle.vcxproj.filters  utils.cpp  utils.h
runtime/libgixsql-pgsql/: DbInterfacePGSQL.cpp  DbInterfacePGSQL.h  Makefile.am  dblib.cpp  libgixsql-pgsql.vcxproj  utils.cpp  utils.h
runtime/libgixsql-sqlite/: DbInterfaceSQLite.cpp  DbInterfaceSQLite.h  Makefile.am  dblib.cpp  libgixsql-sqlite.vcxproj  utils.cpp  utils.h
spdlog/: Makefile.am  spdlog.vcxproj  spdlog.vcxproj.filters
spdlog/include/spdlog/fmt/bundled/: core.h  format.h
